# random-things

./: .gitignore  Cargo.toml  LICENSE  README.md
matmul-arm/: Cargo.toml
matmul-arm/src/: local.rs  main.rs
matmul-x86/: Cargo.toml
matmul-x86/src/: main.rs
mimi-rs/: .gitignore  CLAUDE.md  Cargo.toml
mimi-rs/cuda-kernels/: arithmetic.cu  fill.cu  indexing.cu  layout.cu  reduce.cu
mimi-rs/examples/: basic_cuda.rs  cpu_benchmarks.rs  cuda_thread_test.rs  demucs.rs  llama.rs  mimi.rs  pocket_tts.rs
mimi-rs/src/: backend.rs  cpu_backend.rs  cuda_backend.rs  cuda_kernels.rs  display.rs  dtype.rs  error.rs  inplace_ops.rs  lib.rs  llama.rs  nn.rs  ops.rs  shape.rs  tensor.rs  tensor_view.rs
mimi-rs/src/models/: demucs.rs  kv_cache.rs  llama.rs  mimi.rs  mod.rs
mimi-rs/src/nn/: mod.rs  var_builder.rs
mimi-rs/src/pocket_tts/: conditioners.rs  conv.rs  dummy_quantizer.rs  flow_lm.rs  layer_scale.rs  mimi.rs  mimi_transformer.rs  mlp.rs  resample.rs  rope.rs  seanet.rs  transformer.rs  tts_model.rs
mimi-rs/tests/: cuda_tests.rs  display_tests.rs  tensor_tests.rs
pocket-tts/: Cargo.toml
pocket-tts/src/: conv.rs  flow_lm.rs  flow_mlp.rs  main.rs  mimi_dec.rs  seanet.rs  transformer.rs  tts.rs  wav.rs
pocket_tts/: Cargo.toml
pocket_tts/examples/: pocket_tts.rs
pocket_tts/src/: conditioners.rs  conv.rs  dummy_quantizer.rs  flow_lm.rs  layer_scale.rs  mimi.rs  mimi_transformer.rs  mlp.rs  resample.rs  rope.rs  seanet.rs  transformer.rs  tts_model.rs
