[package]
name = "mimi"
version = "0.1.0"
edition = "2024"

[dependencies]
gemm = "0.19.0"
half = { version = "2.7.1", features = ["num-traits"] }
num-traits = "0.2.19"
num_cpus = "1.17.0"
rayon = "1.11.0"
thiserror = "2.0.17"

[dev-dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hf-hub = "0.4"
safetensors = "0.4"
memmap2 = "0.9"
tokenizers = "0.21"
rand = "0.9.2"
